--- a/src/Component/card.css
+++ b/src/Component/card.css
@@ -8,6 +8,12 @@
   }
 
   .cardimg{
-
         border-radius: 10px 10px 0 0;
+  }
+  .inputtext{
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 10px;
+    width: 100%;
+    height:60%
   }
